# game_playing_ai

./: .gitignore  LICENSE  README.md  main_starter.py  main_starter.py.py  pyproject.toml  theme.json
data/models/20240311114022_episode_999_obs_F__comb_F__solo_T/: config.json  model.pt
data/models/20240311121351_episode_578_obs_T__comb_F__solo_T/: config.json  model.pt
data/models/20240311121412_episode_636_obs_T__comb_T__solo_F/: config.json  model.pt
game_playing_ai/: game_playing_ai.py
game_playing_ai/ai/agents/preprogrammed_agent/: agent.py
game_playing_ai/environments/: environment.py
game_playing_ai/environments/game_items/: food.py
game_playing_ai/games/combat_game/: food_game.py
game_playing_ai/games/food_game/: food_game.py  tile_type.py  trainer.py
game_playing_ai/games/food_game/agents/drl_agent/: DRLAgentSprite.py  dqn_agent.py  ppo_agent.py  trainer.py
game_playing_ai/games/food_game/agents/drl_agent/networks/: cnn.py  dnn.py  dqn_networks.py  ppo_networks.py
game_playing_ai/games/food_game/agents/playable_agent/: agent.py
game_playing_ai/games/food_game/agents/preprogrammed_agent/: agent.py
game_playing_ai/games/food_game/environments/: multi_agent_food_game.py  single_agent_food_game.py
game_playing_ai/games/food_game/game_items/: environment.py  food.py  obstacle.py
game_playing_ai/pages/: food_game_run_page.py  food_game_train_page.py  main_page.py
test/: test_main_starter.py
test/test_game_playing_ai/test_games/test_food_game/: test_food_game.py
(+1 files in other folders)
