[tool.poetry]
name = "game-playing-ai"
version = "0.1.0"
description = ""
authors = ["abbymark <abbymark@naver.com>"]
readme = "README.md"
packages = [{include = "game_playing_ai"}]

[tool.poetry.dependencies]
python = ">=3.10,<=3.11"
torch = "1.13.1"
gymnasium = "^0.29.1"
scipy = "^1.11.4"
numpy = "^1.26.3"
pyyaml = "^6.0.1"
wandb = "^0.16.2"
pettingzoo = "^1.24.3"
pygame-ce = "^2.4.0"
pygame-gui = "^0.6.9"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
